--- a/app/src/main/res/layout/activity_my_dogs.xml
+++ b/app/src/main/res/layout/activity_my_dogs.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="bottom"
     android:background="@color/white"
+    app:layout_collapseMode="none"
     tools:context=".MyDogsActivity">
 
-    <include layout="@layout/content_main" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_main" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -19,35 +22,42 @@
             android:id="@+id/addDogs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="20dp"
             android:drawableLeft="@drawable/ic_add_circle_outline_gray_30dp"
             android:drawablePadding="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="30dp"
+            android:text="Add some dogs"
             android:textColor="@color/dark_gray"
-            android:text="Add some dogs"/>
+            android:textSize="30dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:clipToPadding="false"
+            android:orientation="horizontal"
             android:overScrollMode="never" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="Instructions" />
 
     </FrameLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_dog"
-        android:src="@drawable/ic_add_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        app:fabSize="normal"
+        android:src="@drawable/ic_add_fab"
         app:backgroundTint="@color/red"
         app:elevation="6dp"
-        app:layout_anchorGravity="bottom|right|end"/>
+        app:fabSize="normal"
+        app:layout_anchorGravity="bottom|right|end" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
